--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #e4e4e7;
+}
+*::-webkit-scrollbar-track {
+  background-color: #f4f4f5;
+}
+* {
+  scrollbar-color: #e4e4e7 #f4f4f5;
+  scrollbar-width: thin;
+}
